buzzer_3/build/log/idf_py_stdout_output_15320
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D D:\ESPproject\test_buzzer_3\build\bootloader\esp-idf\esptool_py && D:\Espressif\python_env\idf5.4_py3.11_env\Scripts\python.exe D:/Espressif/frameworks/esp-idf-v5.4.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 D:/ESPproject/test_buzzer_3/build/bootloader/bootloader.bin"
Bootloader binary size 0x5160 bytes. 0x2ea0 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache D:\Espressif\tools\riscv32-esp-elf\esp-14.2.0_20250730\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.4.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/ESPproject/test_buzzer_3/build/config -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/newlib/platform_include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/config/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/config/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/config/riscv/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/FreeRTOS-Kernel/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/FreeRTOS-Kernel/portable/riscv/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/freertos/esp_additions/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/include/soc -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/include/soc/esp32c3 -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/dma/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/ldo/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/debug_probe/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/port/esp32c3/. -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_hw_support/port/esp32c3/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/heap/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/heap/tlsf -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/log/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/soc/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/soc/esp32c3 -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/soc/esp32c3/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/soc/esp32c3/register -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/hal/platform_port/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/hal/esp32c3/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/hal/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_rom/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_rom/esp32c3/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_rom/esp32c3/include/esp32c3 -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_rom/esp32c3 -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_common/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_system/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_system/port/soc -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_system/port/include/riscv -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_system/port/include/private -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/riscv/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/include/apps -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/include/apps/sntp -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/lwip/src/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/freertos/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/esp32xx/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/esp32xx/include/arch -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/lwip/port/esp32xx/include/sys -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_wifi/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_wifi/include/local -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_wifi/wifi_apps/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_wifi/wifi_apps/nan_app/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_event/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_phy/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_phy/esp32c3/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_netif/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/nvs_flash/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_partition/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/driver/deprecated -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/driver/i2c/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/driver/touch_sensor/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/driver/twai/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_pm/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_ringbuf/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_gpio/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_pcnt/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_gptimer/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_spi/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_mcpwm/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_ana_cmpr/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_i2s/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_sdmmc/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/sdmmc/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_sdspi/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_sdio/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_dac/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_rmt/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_tsens/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_sdm/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_i2c/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_uart/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/vfs/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_ledc/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_parlio/include -ID:/Espressif/frameworks/esp-idf-v5.4.3/components/esp_driver_usb_serial_jtag/include -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=D:/ESPproject/test_buzzer_3=. -fmacro-prefix-map=D:/Espressif/frameworks/esp-idf-v5.4.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c D:/ESPproject/test_buzzer_3/main/main.c
D:/ESPproject/test_buzzer_3/main/main.c: In function 'button_isr_handler':
D:/ESPproject/test_buzzer_3/main/main.c:522:9: error: implicit declaration of function 'ets_printf'; did you mean 'vsiprintf'? [-Wimplicit-function-declaration]
  522 |         ets_printf("[ISR] Button pressed! Buzzer now: %s\n",
      |         ^~~~~~~~~~
      |         vsiprintf
ninja: build stopped: subcommand failed.
